[package]
name = "power_sweep"
version = "0.1.0"
description = "analize output from the hackrf_sweep, soapy_power, or rtl_power output"
keywords = ["sdr"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
chrono = "0.4"
clap = "4"
csv = "1.3"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
anyhow = "1.0"
assert_approx_eq = "1.1"