
[package]
name = "spectrum"
description = "Yet Another SDR App"
version = "0.1.0"
authors = ["klangner <klangner@gmail.com>"]
repository = "https://github.com/klangner/yasa"
edition = "2021"

[dependencies]
eframe = "0.25"
egui_plot = "0.25"
futuresdr = { version = "0.0.37", features = ["soapy", "audio", "rtlsdr"] }
crossbeam = "0.8.4"
env_logger = { version = "0.10", default-features = false, features = ["auto-color", "humantime"] }
toml = "0.8"
serde = "1.0.195"
dsp = "0.11"

